tests/parsing/cmc/errors/166.expected
File "tests/parsing/cmc/errors/166.cmc", line 1, character 32-37:
1 | (declare-enum-sort enum (A B C) error)
                                    ^^^^^
Error while parsing an enumeration declaration, read the symbol 'error',
      but expected a closing parenthesis.
